feat: translated contacts and notes. Deleted src folder
